GNOME Bugzilla – Bug 755021
context menu in empty file folder -> crash
Last modified: 2015-09-16 14:41:44 UTC
1. launch gtk3 program (like a gedit) 2. ctrol + o in empty file folder ( file dialog) 3. click right mouce key (context menu) $ gdb gedit Program received signal SIGSEGV, Segmentation fault. file_list_show_popover (impl=impl@entry=0x555555a0d710 [GtkFileChooserWidget], x=174.44906616210938, y=<optimized out>) at gtkfilechooserwidget.c:2315 2315 path = list->data; (gdb) bt
+ Trace 235446
--- gtk3-3.17.8-2.fc23.x86_64 glib2-2.45.7-1.fc23.x86_64 gedit-3.17.90-1.fc23.x86_64
commit 450056cdfe5cbf6fdff9c9def77570d37c0b3cd4 Author: Matthias Clasen <mclasen@redhat.com> Date: Wed Sep 16 07:39:19 2015 -0700 file chooser: Avoid a crash When right-clicking in an empty folder, you should get a context menu, not a crash. The code for positioning the popover was not handling the eventuality of no row under the pointer. Just position the popover right at the click location in this case.